tests/snapshots/run_wpt_conformance__trtx_expand_int32_2D_tensor_to_2D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "expand.https.any.js",
    "expand int32 2D tensor to 2D",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    expandInput: i32[1, 3];\n  }\n\n  nodes {\n    [expandOutput] = expand(expandInput, label=\"\");\n  }\n\n  outputs { expandOutput; }\n}\n",
        ),
    },
)
