tests/snapshots/run_wpt_conformance__trtx_float16_graph_with_float32_input_and_output.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "float16 graph with float32 input and output",
    "trtx",
    "PASS",
)
