tests/snapshots/run_wpt_conformance__trtx_floor_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "floor.https.any.js",
    "floor float16 0D scalar",
    "trtx",
    "PASS",
)
